2.0.4
    - 1.18 support
    - Added a way to reload with the Q button
    - Added Matrix anticheat support
    - Fixed the protection handler
    - Fixed grenade duplication

2.0.3
    - Added residence,towny and worldguard support
    - Fixed item give on shop
    - Fixed glass break
    - Fixed Smoke Grenades
    - Updated metrics
    - Fixed spartan compatiblity
    - Fixed gun delay
    - Fixed translations
    - Added QAGunGiveEvent

2.0.2
    - Improved DestructableMaterials configuration
    - Fixed block breaking
    - Fixed gun reload (Reloading weapons and switching to another slot causes ammo disappear without reloading)
    - Fixed customizable prefix
    - Fixed wrong gun names
    - Fixed explosions
    - Fixed wrong guns colors encoding in configuration files
    - Added an option to force-disable worldguard support
    - Added more messages customization
    - Now caching changelog to reduce lag

2.0.1
    - Added an API method to check if a player is using a gun
    - Fixed flamer fuel

2.0
    - Added HEX color support for items and messages (Warning: Already created weapons might stop working if you change lore, same as before)
    - Reminder: HEX colors format is with # only. Example: "#aabbcc" NOT &#aabbcc". Hex doesn't work with action bar or titles. (Minecraft limitations)
    - Fixed unlimited ammo
    - Fixed spam in console
    - Fixed action bar messages

1.1.176
    - Added Galil-AR
    - Added CTAR-21
    - Added support for QualityHats
    - Updated resources for QualityArmoryVehicles
    - Fixed XP in bar when reloading

1.1.175b
    - Added optional feature to display ammo as XP in XP bar

1.1.175
    - Fixed temporary player issue for protocol lib
    - Fixed swapping item issue for QAV

1.1.174c
    Quickfix to gui error.
    Added fix to offhand item being replaced. Now item should drop on ground

1.1.174b
    Quickfgix for m1garand

1.1.174
    Added M1Garand
    Added 3 new Bullet sounds and 6 new reloading sounds.

1.1.173c